validation/validation_svc+deployment+ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/name: backend-deployment

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backend-deployment
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend-deployment
    spec:
      containers:
      - name: backend-deployment
        image: eu.gcr.io/prj-ext-prod-faang-gcp-dr/dcc-validate-metadata/backend-embassy-cloud:latest 
        command: ['/bin/bash', 'run_uvicorn.sh']
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: data
            mountPath: /data
          - name: files
            mountPath: "/usr/share/nginx/html"
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: validation-pvc
        - name: files
          persistentVolumeClaim:
            claimName: local-storage-pvc

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: validation-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
  - hosts:
    - api.faang.org
    secretName: tls-secret2
  rules:
  - host: api.faang.org
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-svc
          servicePort: 8000
